improved performance of loading temperatures from a file and test